fixed spacing in playlist section

--- a/css/style.css
+++ b/css/style.css
@@ -108,10 +108,11 @@ a:hover {
     font-size: var(--font-size-lg);
     font-weight: 500;
     padding: 0px 12px;
+    transition: background-color 0.5s;
 }
 
 #btn-add:hover {
-    background-color: var(--bar-full-color);
+    background-color: white;
 }
 
 .display-tablet {
@@ -153,6 +154,10 @@ a:hover {
 
 .playlist > a {
     color: white;
+}
+
+.playlist li {
+    padding: 10px 0px;
 }
 
 #down-arrow {
